[project]
name = "fluxdo-hupu-compat"
version = "0.1.0"
description = "Read-only Hupu to Discourse compatibility layer for FluxDO"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0",
  "httpx>=0.28.0",
  "selectolax>=0.3.26",
  "tenacity>=9.1.2",
  "uvicorn[standard]>=0.35.0",
]

[tool.uv]
package = false

